[package]
name = "videostream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = "1.0.147"
ic-cdk-macros = "0.3"
ic-cdk = "0.3.3"
ic-types = "0.3.0"